--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@netlify/functions": "^1.3.0",
     "@types/node": "^18.8.3",
-    "axios": "^1.1.2"
+    "axios": "^1.1.2",
+    "vue-qrcode-reader": "^3.1.0"
   }
 }
