--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@netlify/functions": "^1.3.0",
     "@types/node": "^18.8.3",
     "axios": "^1.1.2",
+    "vue": "^3.2.40",
     "vue-qrcode-reader": "^3.1.0"
   }
 }
